--- a/access-app/src/index.css
+++ b/access-app/src/index.css
@@ -56,3 +56,13 @@ body {
   background-color: orange;
   padding: 20px;
 }
+
+.avatar-container {
+  position: absolute;
+  right: 0;
+  padding-right: 20px;
+}
+
+.avatar {
+  position: relative;
+}
